--- a/src/pages/app.html
+++ b/src/pages/app.html
@@ -10,7 +10,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    
+
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
@@ -43,14 +43,52 @@
     </header>
 
     <main class="container mt-5">
+      <!--cria cada card de lista que será exibido buscando os dados do banco-->
       <section>
         <h4 id="title" class="mb-2 text-center">Suas Listas</h4>
         <div
           id="cardsContainer"
           class="row row-cols-1 row-cols-md-3 g-4 justify-content-center"
         ></div>
+        <template id="cardTemplate">
+          <div class="col">
+            <div class="card h-100 lista-card">
+              <div class="card-body">
+                <div class="d-flex justify-content-between align-items-center">
+                  <h5 id="h5-card" class="card-title">Lista de Compras</h5>
+                  <div>
+                    <button
+                      title="botão para editar sua lista"
+                      class="btn btn-primary btn-sm me-2 editar-btn"
+                    >
+                      <i class="bi bi-pencil"></i>
+                    </button>
+                    <button
+                      title="botão para excluir sua lista"
+                      class="btn btn-danger btn-sm deletar-btn"
+                    >
+                      <i class="bi bi-trash"></i>
+                    </button>
+                  </div>
+                </div>
+                <p class="card-text">
+                  <small class="text-muted data-criacao"></small>
+                </p>
+              </div>
+              <div class="card-footer bg-transparent">
+                <button
+                  title="ver itens da lista"
+                  class="btn btn-link ver-itens-btn"
+                >
+                  Ver Itens <i class="bi bi-arrow-right"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+        </template>
       </section>
 
+      <!--Botões para criar a lista de compras. Ao clicar abre o modal a baixo-->
       <div class="text-center mt-5 py-5">
         <button
           id="shopping-list"
@@ -58,7 +96,7 @@
           title="Nova Lista de compras"
           class="btn btn-primary btn-lg d-none d-md-inline-block"
           data-bs-toggle="modal"
-          data-bs-target="#staticBackdrop"
+          data-bs-target="#modalCriarNovaLista"
         >
           <i class="bi bi-plus-circle me-2"></i>Criar Nova Lista
         </button>
@@ -68,111 +106,17 @@
           title="Nova Lista de compras"
           class="btn btn-primary rounded-circle floating-btn"
           data-bs-toggle="modal"
-          data-bs-target="#staticBackdrop"
+          data-bs-target="#modalCriarNovaLista"
           style="width: 60px; height: 60px"
         >
           <i class="bi bi-plus" style="font-size: 1.5rem"></i>
         </button>
       </div>
 
-      <div class="modal fade" id="listaModal">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title">
-                Lista criada em: <span id="listaData"></span>
-              </h5>
-              <button
-                type="button"
-                title="Fechar modal"
-                class="btn-close"
-                data-bs-dismiss="modal"
-              ></button>
-            </div>
-            <div class="modal-body">
-              <ul id="listaItensModal" class="list-group"></ul>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Modal de Edição antes de enviar -->
-      <div class="modal fade" id="modalEdicao" tabindex="-1" aria-hidden="true">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title">Editar Item</h5>
-              <button
-                type="button"
-                class="btn-close"
-                data-bs-dismiss="modal"
-                aria-label="Close"
-              ></button>
-            </div>
-            <div class="modal-body">
-              <div class="mb-3">
-                <label class="form-label">Produto</label>
-                <input type="text" id="editProduto" class="form-control" />
-              </div>
-              <div class="mb-3">
-                <label class="form-label">Quantidade</label>
-                <input
-                  type="number"
-                  id="editQuantidade"
-                  class="form-control"
-                  step="0.01"
-                />
-              </div>
-              <div class="mb-3">
-                <label class="form-label">Unidade</label>
-                <select id="editUnidade" class="form-select">
-                  <option value="Un">Unidade (Un)</option>
-                  <option value="Kg">Quilograma (Kg)</option>
-                  <option value="g">Grama (g)</option>
-                  <option value="L">Litro (L)</option>
-                </select>
-              </div>
-            </div>
-            <div class="modal-footer">
-              <button
-                type="button"
-                class="btn btn-secondary"
-                data-bs-dismiss="modal"
-              >
-                Cancelar
-              </button>
-              <button type="button" class="btn btn-primary" id="salvarEdicao">
-                Salvar
-              </button>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Modal de Edição na lista no banco-->
-      <div class="modal fade" id="modalEdicaoSimples" tabindex="-1" aria-labelledby="modalEdicaoSimplesLabel" aria-hidden="true">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="modalEdicaoSimplesLabel">Editar Itens da Lista</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-              <ul class="list-group" id="listaEdicaoSimples">
-                
-              </ul>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-              <button type="button" class="btn btn-primary" onclick="salvarEdicaoSimples()">Salvar</button>
-            </div>
-          </div>
-        </div>
-      </div>
-
+      <!--Modal para criar nova lista-->
       <div
         class="modal fade"
-        id="staticBackdrop"
+        id="modalCriarNovaLista"
         data-bs-backdrop="static"
         data-bs-keyboard="false"
         tabindex="-1"
@@ -249,8 +193,89 @@
           </div>
         </div>
       </div>
+
+      <!--Modal para ver os itens da lista-->
+      <div class="modal fade" id="listaModal">
+        <div class="modal-dialog modal-lg">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">
+                Lista criada em: <span id="listaData"></span>
+              </h5>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+              ></button>
+            </div>
+            <div class="modal-body">
+              <!-- Área de edição (inicialmente escondida) -->
+              <div
+                id="editArea"
+                class="mb-3 p-3 border rounded"
+                style="display: none"
+              >
+                <div class="row g-2">
+                  <div class="col-md-5">
+                    <input
+                      type="text"
+                      id="editNome"
+                      class="form-control"
+                      placeholder="Nome"
+                    />
+                  </div>
+                  <div class="col-md-3">
+                    <input
+                      type="number"
+                      id="editQuantidade"
+                      class="form-control"
+                      placeholder="Qtd"
+                      min="1"
+                    />
+                  </div>
+                  <div class="col-md-2">
+                    <select id="editUnidade" class="form-select">
+                      <option value="Un">Un</option>
+                      <option value="Kg">Kg</option>
+                      <option value="g">g</option>
+                      <option value="L">L</option>
+                    </select>
+                  </div>
+                  <div class="col-md-2 d-flex">
+                    <button
+                      id="saveEditBtn"
+                      class="btn btn-success btn-sm me-1"
+                    >
+                      <i class="bi bi-check"></i>
+                    </button>
+                    <button
+                      onclick="cancelEdit()"
+                      class="btn btn-danger btn-sm"
+                    >
+                      <i class="bi bi-x"></i>
+                    </button>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Lista de itens -->
+              <ul id="listaItensModal" class="list-group"></ul>
+
+              <!-- Botão de adicionar (fixo, não se repete) -->
+              <div class="mt-3">
+                <button
+                  onclick="showAddItemForm()"
+                  class="btn btn-primary btn-sm"
+                >
+                  <i class="bi bi-plus"></i> Adicionar Item
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
-    <script src="/src/js/app.js"></script>
+    <script type="module" src="/src/js/app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11" async></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
